@@ -1,0 +1,275 @@
+<!DOCTYPE html>
+<head>
+<script type='application/ld+json'>
+{"@context": "https://schema.org", "@graph": [{"@type": "Article", "headline": "74\u6b72K-pop\u50b3\u5947\u8d99\u5bb9\u5f3c\u777d\u905511\u5e74\u63a8\u51fa\u7b2c20\u5f35\u9304\u97f3\u5ba4\u5c08\u8f2f\uff01", "description": "74\u6b72K-pop\u50b3\u5947\u8d99\u5bb9\u5f3c\u777d\u905511\u5e74\u63a8\u51fa\u7b2c20\u5f35\u9304\u97f3\u5ba4\u5c08\u8f2f\uff01", "url": "https://www.famechos.me/news/74\u6b72K-pop\u50b3\u5947\u8d99\u5bb9\u5f3c\u777d\u905511\u5e74\u63a8\u51fa\u7b2c20\u5f35\u9304\u97f3\u5ba4\u5c08\u8f2f\uff01.html", "image": "https://www.famechos.me/images/banner.jpg", "datePublished": "2024-10-22T12:07:56.801046+08:00", "author": {"@type": "Person", "name": "Famechos"}, "publisher": {"@type": "Organization", "name": "Famechos", "url": "https://www.famechos.me"}}, {"@type": "Organization", "name": "Famechos", "url": "https://www.famechos.me", "logo": "https://www.famechos.me/icons/favicon.png"}, {"@type": "WebSite", "name": "Famechos", "url": "https://www.famechos.me"}]}
+</script>
+<link rel="canonical" href="https://www.famechos.me/news/74歲K-pop傳奇趙容弼睽違11年推出第20張錄音室專輯！.html"/>
+<meta name="description" content="傳奇K-pop歌手趙容弼睽違11年推出第20張錄音室專輯！74歲的他再次展現音樂才華，帶來全新的音樂饗宴。">
+
+<meta name="keywords" content="趙容弼, K-pop, 第20張錄音室專輯, 睽違11年, 74歲, 傳奇歌手, 音樂才華">
+
+<link rel="stylesheet" href="../main-nav.css">
+<link rel="stylesheet" href="../main-content.css">
+<link rel="stylesheet" href="../main-small.css">
+<link rel="stylesheet" href="../post.css">
+<link rel="stylesheet" href="../main-footer.css">
+<link rel="stylesheet" href="../news.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+<link rel="stylesheet" href="https://fonts.googleapis.com/earlyaccess/notosanstc.css">
+        <meta property="og:url" content="https://www.famechos.me/news/74歲K-pop傳奇趙容弼睽違11年推出第20張錄音室專輯！.html" />
+        <meta property="og:title" content="74歲K-pop傳奇趙容弼睽違11年推出第20張錄音室專輯！" />
+        <meta property="og:description" content="74歲K-pop傳奇趙容弼睽違11年推出第20張錄音室專輯！" />
+        <meta property="og:image" content="https://www.famechos.me/images/banner.jpg" />
+        <meta property="twitter:card" content="summary_large_image" />
+        <meta property="twitter:title" content="74歲K-pop傳奇趙容弼睽違11年推出第20張錄音室專輯！" />
+        <meta property="twitter:description" content="74歲K-pop傳奇趙容弼睽違11年推出第20張錄音室專輯！" />
+        <meta property="twitter:image" content="https://www.famechos.me/images/banner.jpg" />
+<meta name="theme-color" content="white">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta property="og:locale" content="zh_TW" />
+        <meta property="og:site_name" content="Famechos" />
+<meta property="og:type" content="article" />
+<meta name="robots" content="index, follow" />
+<meta name="author" content="Famechos" />
+        <meta name="referrer" content="origin">
+<meta name="apple-mobile-web-app-capable" content="yes"/>
+        <meta name="apple-mobile-web-app-status-bar-style" content="black"/>
+        <meta name="apple-mobile-web-app-title" content="Avoir"/>
+        <meta name="apple-touch-fullscreen" content="yes"/>
+        
+<style> * {box-sizing: border-box;margin: 0;padding: 0;font-family: 'Noto Sans TC', sans-serif;scroll-behavior: smooth;}</style>
+
+</head>
+
+<body>
+
+<nav class="nav">
+    <div class="nav-outerbox">
+      <div class="nav-inner-left">
+        <div class="nav-name-logo">
+          <a href="https://www.famechos.me/"><img class="famechos-logo" src="../img/famechos_logo.png"></a>
+         
+        </div>
+        <div class="nav-separate">
+          <p>|</p>
+        </div>
+        <div class="nav-type-1 nav-type"><a href="https://www.famechos.me/k-pop.html">
+          <button class="nav-type-btn1 nav-type-btn">
+          <h2 class="nav-type-text">K-POP</h2>
+        </button></a>
+ 
+        </div>
+        <div class="nav-type-2 nav-type"><a href="https://www.famechos.me/j-pop.html">
+          <button class="nav-type-btn2 nav-type-btn">
+          <h2 class="nav-type-text">J-POP</h2>
+        </button></a>
+ 
+        </div>
+        <div class="nav-type-3 nav-type"><a href="https://www.famechos.me/drama.html">
+          <button class="nav-type-btn3 nav-type-btn">
+          <h2 class="nav-type-text">影視</h2>
+        </button></a>
+         
+        </div>
+        <div class="nav-type-4 nav-type"><a href="https://www.famechos.me/others.html">
+          <button class="nav-type-btn4 nav-type-btn">
+          <h2 class="nav-type-text">其他</h2>
+        </button></a>
+        </div>  
+      </div>
+      <div class="nav-inner-right">
+        <div class="nav-feedback-outer"><a href="https://www.famechos.me/about_us.html">
+          <button class="feedback-btn nav-type-btn">
+            <h2 class="nav-type-text">關於我們</h2>
+          </button></a>
+        </div>
+        <div class="nav-setting"><a href="https://www.famechos.me/privacy_policy.html">
+          <button class="setting-btn nav-type-btn">
+            <h2 class="nav-type-text">私隱條款</h2>
+          </button></a>
+        </div>
+        <div class="nav-list">
+          <button id="list-btn" class="list-btn nav-type-btn">
+            <i class="bi bi-list"></i>
+          </button>
+        </div>
+
+      </div>
+
+      <div id="list" class="nav-list-outer">
+        <div class="nav-type-1 nav-type list-type"><a href="https://www.famechos.me/k-pop.html">
+          <button class="list-type-btn">
+          <p>K-POP</p>
+          </button></a>
+        </div>
+
+        <div class="nav-type-2 nav-type list-type"><a href="https://www.famechos.me/j-pop.html">
+          <button class="list-type-btn">
+          <p>J-POP</p>
+          </button></a>
+        </div>
+
+        <div class="nav-type-3 nav-type list-type"><a href="https://www.famechos.me/drama.html">
+          <button class="list-type-btn">
+          <p>影視</p>
+          </button></a>
+        </div>
+
+        <div class="nav-type-4 nav-type list-type"><a href="https://www.famechos.me/others.html">
+          <button class="list-type-btn">
+          <p>其他</p>
+          </button></a>
+        </div>
+
+        <div class="nav-type-5 nav-type list-type"><a href="https://www.famechos.me/about_us.html">
+          <button class="list-type-btn">
+          <p>關於我們</p>
+          </button></a>
+        </div>
+
+        <div class="nav-type-6 nav-type list-type"><a href="https://www.famechos.me/privacy_policy.html">
+          <button class="list-type-btn">
+          <p>私隱條款</p>
+          </button></a>
+
+        </div>  
+
+      </div>
+     
+    </div>
+  </nav>
+
+
+  <main>
+    <div class="news-main-outer">
+      <div class="news-title-outer">
+        <h1>74歲K-pop傳奇趙容弼睽違11年推出第20張錄音室專輯！</h1>
+</div>
+
+      <div class="news-content-outer">
+
+        <div class="news-info-outer">
+          <p class="news-content-type">K-Pop</p>
+          <p class="news-date">22/10/2024</p>
+        </div>
+<p>韓國音樂傳奇 Cho Yong-pil 將在星期二推出他的第20張完整錄音室專輯，適當地命名為 "20"。這張備受期待的專輯標誌著74歲藝術家的11年來首張錄音室專輯。</p>
+<p>專輯的主打歌曲是一首韓語歌曲，大致翻譯為 "沒關係"，根據他的經紀公司 YPC Company 的描述，這首歌曲是一首激勵人心的頌歌，適合所有在現代生活中面臨挑戰的人。</p>
+<p>這首歌曲的音樂視頻將與專輯的數位版本同步發布，於下午6點發布，包括韓國演員朴根亨、全美度、李絮和邊耀漢等人。</p>
+<p>Cho 於1968年作為搖滾樂隊阿特金斯的成員首次亮相。經過十年的各種樂隊生涯，包括 Kim Trio，他於1976年以熱門單曲 "回到釜山港" 開始了他的個人事業。</p>
+<p>他通過他的第一張完整錄音室專輯而成名，其中包括熱門歌曲 "窗外的女孩" 和 "短髮女孩"。這張專輯是K-pop歷史上第一張銷量達到一百萬張的專輯。</p><h2> Cho Yong-pil </h2>
+<p> Cho Yong-pil 是韓國音樂界的傳奇人物，職業生涯橫跨數十年。他一共發布了19張錄音室專輯，包括標誌性的歌曲 "燭光"、"夢想" 和 "吉力馬扎羅的豹子"，並贏得了無數獎項和音樂行業的記錄。</p>
+<p> Cho 是韓國第一位實現一百萬張專輯銷量和總專輯銷量超過一千萬張的藝術家。去年，他通過在首爾南部的蠶室奧林匹克體育場舉行個人演唱會，慶祝了他出道55週年。這座體育場可容納六萬多人，是音樂行業中只有頂級明星才能使用的場地。</p>
+<p> Cho 的最後一張完整錄音室專輯是 "Hello"，他的第19張專輯，於2013年發布。專輯中的歌曲，包括 "Bounce" 和 "Hello"，對音樂榜單產生了重大影響，甚至超越了像 "江南Style" 的 Psy 這樣的年輕 K-pop 明星。</p>
+<p> 為了準備他的第20張專輯，Cho 先前發布了兩張單曲專輯 "Road to 20-Prelude 1" 和 "Road to 20-Prelude 2"，分別於2022年10月和2023年4月發布。他通過歌曲 "Moment"、"Like Serengeti"、"Feeling of You" 和 "La" 展示了他仍然年輕的感性，探索了流行搖滾和進步浩室等流派。</p>
+<p> 第20張專輯的發布最初計劃於去年，但據報導延遲了一年，以確保音樂的完美。實體專輯定於11月1日發布。</p>
+<h2>韓國歌手趙容弼即將開唱</h2>
+<p>南韓歌手趙容弼將於11月23日至24日和11月30日至12月1日在首爾舉行演唱會。</p>
+<h2>南韓衛星捕捉北韓軍隊前往俄羅斯的畫面</h2>
+<p>南韓衛星拍攝到北韓軍隊向俄羅斯移動的影像，顯示北韓軍隊在俄羅斯境內的活動。</p>
+<h2>俄羅斯駐韓大使被南韓外交部召見</h2>
+<p>南韓外交部召見俄羅斯駐韓大使，就北韓向俄羅斯派遣軍隊一事表達關切。</p>
+<h2>南韓要求北韓立即從俄羅斯撤出軍隊</h2>
+<p>南韓敦促北韓立即從俄羅斯撤軍，指出北韓向俄羅斯派遣軍隊的行為違反了國際法。</p>
+<p>南韓總統尹錫悅（Yoon）與北約秘書長進行了電話會議，就北韓向俄羅斯派遣軍隊一事交換意見。</p>
+<h2>烏克蘭戰場上出現俄羅斯和北韓旗幟並列的情況</h2>
+<p>近日，俄羅斯和北韓旗幟在烏克蘭戰場上並列的畫面引起了國際社會的關注。</p>
+
+<p>資料來源：Yonhap News Agency</p>
+</div><div class ="news-vid-outer">
+<div class="related-vid-text-outer title-bar ">
+<p class="related-vid-text">相關影片：</p>
+</div>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/qPwesgkfThE" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+
+<p class="news-text-inner">資料來源： YouTube</p>
+</div>
+
+
+ <div class ="related-news-outer title-bar">
+        <p class="related-news-text">相關新聞：</p>
+      </div>
+     
+      <div class ="related-news-box">
+        
+<p class ="related-news">
+          <i class="bi bi-dot"></i>
+          <a href="https://www.famechos.me/news/韓國藝術界新時代！首次接受藝術品繳納繼承稅，豐富國內藝術界.html">韓國藝術界新時代！首次接受藝術品繳納繼承稅，豐富國內藝術界</a>
+        </p>
+                
+<p class ="related-news">
+          <i class="bi bi-dot"></i>
+          <a href="https://www.famechos.me/news/巫術驚悚片《屍啟》震驚西班牙！拿下錫切斯國際奇幻電影節大獎，1200萬觀眾為何瘋狂.html">巫術驚悚片《屍啟》震驚西班牙！拿下錫切斯國際奇幻電影節大獎，1200萬觀眾為何瘋狂</a>
+        </p>
+                
+<p class ="related-news">
+          <i class="bi bi-dot"></i>
+          <a href="https://www.famechos.me/news/KPOP十一月大爆發！BTS成員Jin個人專輯、ENHYPEN新專輯、VIVIZ迷你專輯齊發.html">KPOP十一月大爆發！BTS成員Jin個人專輯、ENHYPEN新專輯、VIVIZ迷你專輯齊發</a>
+        </p>
+                
+      </div>
+
+    </div>
+
+    </main>
+ <footer class="footer">
+    <div class="footer-outer">
+
+
+      <div class="footer-up-outer">
+        <div class="footer-right-name-box">
+          <a href="https://www.famechos.me/"><img class="famechos-logo-footer" src="../img/famechos_logo.png"></a>
+        </div>
+        <div class="footer-right-text-box">
+          <p class="footer-right-text">每日為你提供最新、最全面的日韓資訊。</p>
+        </div>
+        <div class="footer-button-box">
+          <button class="facebook-btn footer-btn">
+            <i class="bi bi-facebook footer-logo"></i>
+          </button>
+          <button class="ig-btn footer-btn">
+            <i class="bi bi-instagram footer-logo"></i>
+          </button>
+          <button class="x-btn footer-btn">
+            <i class="bi bi-twitter-x footer-logo"></i>
+          </button>
+          <button class="x-btn footer-btn">
+            <i class="bi bi-envelope-fill footer-logo"></i>
+          </button>
+        </div>
+      </div>
+
+      <div class="footer-down-outer">
+        <div class="kpop-footer-box footer-box">
+          <a href="https://www.famechos.me/k-pop.html"><p class="footer-text">K-POP</p></a>
+        </div>
+        <div class="jpop-footer-box footer-box">
+          <a href="https://www.famechos.me/j-pop.html"><p class="footer-text">J-POP</p></a>
+        </div>
+        <div class="drama-footer-box footer-box">
+          <a href="https://www.famechos.me/drama.html"><p class="footer-text">影視</p></a>
+        </div>
+        <div class="other-footer-box footer-box">
+          <a href="https://www.famechos.me/others.html"><p class="footer-text">其他</p></a>
+        </div>
+
+
+      </div>
+
+      <div class="copyright-outer">
+        <p class="copyright-text">
+          Copyright © 2024 by <strong>Famechos.me</strong> All Rights Reserved.
+        </p>
+      </div>
+
+     
+    </div>
+
+
+
+  </footer>
+
+<script src="../nav-list.js"></script>
+
+</body>
+</html>
