@@ -5,7 +5,7 @@
   <title>Famechos</title>
   <link>https://www.famechos.me/</link>
   <description>Famechos - News Article</description>
-  <lastBuildDate>Tue, 22 Oct 2024 11:56:32 +0800</lastBuildDate>
+  <lastBuildDate>Tue, 22 Oct 2024 12:08:38 +0800</lastBuildDate>
 
   <item>
   <title>KPOP界大事！RIIZE昇瀚回歸、防弹少年团金碩珍新單曲、aespa登頂iTunes榜單</title>
@@ -297,5 +297,11 @@ YG娛樂旗下的新人女團BABYMONSTER（韓語：베이비몬스터）將於1
   <description>今日K-pop：Le Sserafim將於12月發行第三張日本單曲。...</description>
   <category>K-Pop</category>
   <pubDate>Tue, 22 Oct 2024 11:56:32 +0800</pubDate>
+</item><item>
+  <title>74歲K-pop傳奇趙容弼睽違11年推出第20張錄音室專輯！</title>
+  <link>https://www.famechos.me/news/74歲K-pop傳奇趙容弼睽違11年推出第20張錄音室專輯！.html</link>
+  <description>K-pop傳奇 Cho Yong-pil 推出第20張錄音室專輯...</description>
+  <category>K-Pop</category>
+  <pubDate>Tue, 22 Oct 2024 12:08:38 +0800</pubDate>
 </item></channel>
 </rss>
