@@ -296,4 +296,10 @@
     <ns0:changefreq>weekly</ns0:changefreq>
     <ns0:priority>0.90</ns0:priority>
   </ns0:url>
+<ns0:url>
+    <ns0:loc>https://www.famechos.me/news/74歲K-pop傳奇趙容弼睽違11年推出第20張錄音室專輯！.html</ns0:loc>
+    <ns0:lastmod>2024-10-22T12:08:38+08:00</ns0:lastmod>
+    <ns0:changefreq>weekly</ns0:changefreq>
+    <ns0:priority>0.90</ns0:priority>
+  </ns0:url>
 </ns0:urlset>
